--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+    --color-primary: #ffffff;
+    /* Background */
+    --color-secondary: #8EC04A;
+    /* Hover/Accent */
+    --color-accent: #1478B4;
+}
