dashboard and other components created

--- a/src/app/Navigation/sidebar/sidebar.component.html
+++ b/src/app/Navigation/sidebar/sidebar.component.html
@@ -8,11 +8,13 @@
     </div>
     <div class="flex items-center space-x-4">
         <button
-            class="bg-primary text-accent px-4 py-2 rounded-md font-semibold text-sm hover:bg-secondary hover:text-primary transition-colors duration-300 ease-in-out"
+            class="bg-primary text-accent px-4 py-2 rounded-md font-semibold text-sm flex items-center space-x-2 hover:bg-secondary hover:text-primary transition-colors duration-300 ease-in-out"
             (click)="onLogout()">
-            Logout
+            <i class="fas fa-sign-out-alt"></i>
+            <span>Logout</span>
         </button>
     </div>
+
 </div>
 
 
@@ -76,7 +78,7 @@
     <div
         class="hover:cursor-pointer hover:bg-gray-200 hover:text-accent p-4 text-center text-gray-600 text-sm border-t border-gray-300 flex items-center justify-center space-x-2">
         <i class="fas fa-user-circle text-lg"></i>
-        <span *ngIf="!isCollapsed">Welcome, Bhanu</span>
+        <span *ngIf="!isCollapsed">Welcome, {{Username}}</span>
     </div>
 
 </div>
