--- a/src/app/WatchWare/Auth/login/login.component.html
+++ b/src/app/WatchWare/Auth/login/login.component.html
@@ -39,6 +39,9 @@
                 <span *ngIf="loading">
                     <i class="fas fa-spinner fa-spin"></i>
                 </span>
+                <span *ngIf="!loading">
+
+                </span>
 
                 <span>Log in</span>
             </button>
