--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,23 @@
 
 <ng-template #mainLayout>
   <div class="flex">
+
     <app-sidebar *ngIf="!isLoginPage" (collapseChange)="isCollapsed = $event"></app-sidebar>
-    <div class="flex-1 h-screen pt-24 pb-2 pr-3 transition-all duration-300 ease-in-out"
-      [ngClass]="{ 'pl-28': !isLoginPage && isCollapsed, 'pl-72': !isLoginPage && !isCollapsed }">
+    <div class="flex-1 h-screen pt-24 pb-2 pr-3 transition-all duration-300 ease-in-out" [ngClass]="{
+    'pl-0': isCollapsed, 
+    'pl-28': !isLoginPage && !isCollapsed, 
+    'pl-72': !isLoginPage && !isCollapsed && screenIsLarge 
+  }">
+      <div class="text-pretty font-semibold text-gray-600">
+        <div *ngIf="breadcrumbs.length > 0" class="breadcrumbs">
+          <ng-container *ngFor="let breadcrumb of breadcrumbs; let i = index">
+            <span *ngIf="i < breadcrumbs.length - 1">{{ breadcrumb }} &gt; </span>
+            <span *ngIf="i === breadcrumbs.length - 1">{{ breadcrumb }}</span>
+          </ng-container>
+        </div>
+      </div>
       <router-outlet></router-outlet>
     </div>
+
   </div>
 </ng-template>
