--- a/src/app/WatchWare/Reports/Result/trends/trends.component.html
+++ b/src/app/WatchWare/Reports/Result/trends/trends.component.html
@@ -2,7 +2,7 @@
     <!-- Header with Export Buttons -->
     <div *ngIf="data && data.length > 0" class="flex items-center justify-between mb-6">
         <div class="flex justify-start">
-            <span class="font-semibold text-lg">Data Report</span>
+            <span class="font-semibold text-lg">Trend</span>
             <span class="text-gray-600 text-lg mx-6">Average : {{getAggregationTypeName(aggregationType)}}</span>
         </div>
         <div class="flex gap-3">
