--- a/src/app/WatchWare/Reports/Result/data-report/data-report.component.html
+++ b/src/app/WatchWare/Reports/Result/data-report/data-report.component.html
@@ -18,9 +18,9 @@
         </div>
     </div>
 
-    <div class="overflow-x-auto">
+    <div class="w-[1570px]">
 
-        <table class="w-full border border-gray-300 rounded-lg shadow-md">
+        <!-- <table class="w-full border border-gray-300 rounded-lg shadow-md">
             <thead>
                 <tr class="bg-secondary text-primary">
                     <th *ngFor="let col of columns" class="border border-gray-300 px-4 py-3 text-left">{{ col.header }}
@@ -34,7 +34,22 @@
                     </td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
+        <p-table *ngIf="data && data.length > 0" showGridlines [value]="data" [paginator]="true" [rows]="10"
+            [responsiveLayout]="'scroll'">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);min-width:200px"
+                        *ngFor="let col of columns">{{col.header }}
+                    </th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-row>
+                <tr>
+                    <td *ngFor="let col of columns">{{ row[col.field] }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
     </div>
 </div>
 
