--- a/src/app/WatchWare/Reports/selection/selection.component.html
+++ b/src/app/WatchWare/Reports/selection/selection.component.html
@@ -72,7 +72,7 @@
     </form>
 
 </div>
-<div class=" border rounded-lg shadow-md p-4 bg-white h-[700px]">
+<div class=" border rounded-lg shadow-md p-4 bg-white">
 
     <div *ngIf="reportData">
         <!-- <ng-container [ngSwitch]="reportFilterForm.value.ReportType"> -->
