--- a/src/app/WatchWare/Company/list-companies/list-companies.component.html
+++ b/src/app/WatchWare/Company/list-companies/list-companies.component.html
@@ -1,1 +1,83 @@
-<p>list-companies works!</p>
+<div class="my-5 border rounded-lg shadow-md p-4 bg-white">
+    <p-table #dt [value]="Companies" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
+        showGridlines="" [paginator]="true"
+        [globalFilterFields]="['ShortName', 'LegalName', 'Country', 'State', 'District']"
+        [tableStyle]="{ 'min-width': '1000px' }">
+        <ng-template #caption>
+            <div class="flex">
+                <button type="button"
+                    class=" px-4 bg-primary border border-accent text-accent rounded-md hover:bg-accent hover:text-primary transition">
+                    <i class="fa fa-plus"></i>
+                    Create
+                </button>
+                <p-iconfield iconPosition="left" class="ml-auto">
+                    <p-inputicon>
+                        <i class="fa fa-search"></i>
+                    </p-inputicon>
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search keyword" />
+                </p-iconfield>
+            </div>
+        </ng-template>
+        <ng-template #header>
+            <tr>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:15%">Short Name
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:20%">Legal Name
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:15%">Country
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:15%">State</th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:15%">District
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Active</th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Created On
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Action
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-company>
+            <tr>
+                <td>{{ company.ShortName }}</td>
+                <td>{{ company.LegalName }}</td>
+                <td>{{ company.Country }}</td>
+                <td>{{ company.State }}</td>
+                <td>{{ company.District }}</td>
+                <td>
+                    <i class="fa" [ngClass]="{
+                        'text-green-500 fa-circle-check': company.Active,
+                        'text-red-500 pi-times-circle': !company.Active
+                    }"></i>
+                </td>
+                <td>{{ company.CreatedOn | date:'yyyy-MMM-dd' }}</td>
+                <td>
+                    <div class="flex gap-2">
+
+                        <button type="button"
+                            class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
+                            <i class="fa fa-pencil-alt"></i>
+                        </button>
+
+
+                        <button type="button"
+                            class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
+                            <i class="fa fa-trash"></i>
+                        </button>
+
+
+                        <button type="button" (click)="onStations(company)"
+                            class="px-2  text-blue-500 border border-blue-500 rounded-md hover:bg-blue-500 hover:text-white transition">
+                            Stations
+                        </button>
+                    </div>
+                </td>
+
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="7">No companies found.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
