--- a/src/app/WatchWare/ScalingFactor/list-scaling-factors/list-scaling-factors.component.html
+++ b/src/app/WatchWare/ScalingFactor/list-scaling-factors/list-scaling-factors.component.html
@@ -1,1 +1,80 @@
-<p>list-scaling-factors works!</p>
+<div class="my-5 border rounded-lg shadow-md p-4 bg-white">
+    <p-table #dt [value]="ScalingFactors" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]"
+        [loading]="Loading" showGridlines="" [paginator]="true"
+        [globalFilterFields]="['MinInput', 'MaxInput','MinOutput','MaxOutput']"
+        [tableStyle]="{ 'min-width': '1000px' }">
+        <ng-template #caption>
+            <div class="flex">
+                <button type="button" (click)="onCreate()"
+                    class=" px-4 bg-primary border border-accent text-accent rounded-md hover:bg-accent hover:text-primary transition">
+                    <i class="fa fa-plus"></i>
+                    Create
+                </button>
+                <p-iconfield iconPosition="left" class="ml-auto">
+                    <p-inputicon>
+                        <i class="fa fa-search"></i>
+                    </p-inputicon>
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search keyword" />
+                </p-iconfield>
+            </div>
+        </ng-template>
+        <ng-template #header>
+            <tr>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:20%">Minimum
+                    Input
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:20%">
+                    Maximum Input
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:20%">
+                    Minimum Output
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:20%">
+                    Maximum Output
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:5%">Active
+                </th>
+                <th style="background-color:  var(--color-secondary) ;color: var(--color-primary);width:10%">Action
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-factor>
+            <tr>
+                <td>{{factor.MinInput}}</td>
+                <td>{{factor.MaxInput}}</td>
+                <td>{{factor.MinOutput}}</td>
+                <td>{{factor.MaxOutput}}</td>
+
+
+                <td>
+                    <i class="fa" [ngClass]="{
+                        'text-green-500 fa-circle-check': factor.Active,
+                        'text-red-500 fa-circle-xmark': !factor.Active
+                    }"></i>
+                </td>
+
+                <td>
+                    <div class="flex gap-2">
+
+                        <button type="button"
+                            class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
+                            <i class="fa fa-pencil-alt"></i>
+                        </button>
+
+
+                        <button type="button"
+                            class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+                </td>
+
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="7">No Scaling Factors found.</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
