--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </ng-container>
 
 <ng-template #mainLayout>
-  <div class="flex">
+  <div class="flex bg-gray-50">
 
     <app-sidebar *ngIf="!isLoginPage" (collapseChange)="isCollapsed = $event"></app-sidebar>
     <div class="flex-1 h-screen pt-24 pb-2 pr-3 transition-all duration-300 ease-in-out" [ngClass]="{
