--- a/src/app/WatchWare/Company/list-companies/list-companies.component.html
+++ b/src/app/WatchWare/Company/list-companies/list-companies.component.html
@@ -53,7 +53,7 @@
                 <td>
                     <div class="flex gap-2">
 
-                        <button type="button"
+                        <button type="button" (click)="onEdit(company)"
                             class="px-2 text-green-500 border border-green-500 rounded-md hover:bg-green-500 hover:text-white transition">
                             <i class="fa fa-pencil-alt"></i>
                         </button>
