--- a/src/app/WatchWare/Company/list-companies/list-companies.component.html
+++ b/src/app/WatchWare/Company/list-companies/list-companies.component.html
@@ -1,6 +1,6 @@
 <div class="my-5 border rounded-lg shadow-md p-4 bg-white">
     <p-table #dt [value]="Companies" dataKey="Id" [rows]="10" [rowsPerPageOptions]="[10, 25, 50]" [loading]="Loading"
-        showGridlines="" [paginator]="true"
+        showGridlines [paginator]="true"
         [globalFilterFields]="['ShortName', 'LegalName', 'Country', 'State', 'District']"
         [tableStyle]="{ 'min-width': '1000px' }">
         <ng-template #caption>
@@ -59,7 +59,7 @@
                         </button>
 
 
-                        <button type="button"
+                        <button type="button" (click)="onDelete(company)"
                             class="px-2 text-red-500 border border-red-500 rounded-md hover:bg-red-500 hover:text-white transition">
                             <i class="fa fa-trash"></i>
                         </button>
@@ -76,8 +76,28 @@
         </ng-template>
         <ng-template #emptymessage>
             <tr>
-                <td colspan="7">No companies found.</td>
+                <td colspan="8">No companies found.</td>
             </tr>
         </ng-template>
     </p-table>
 </div>
+<p-confirmdialog #cd>
+    <ng-template #headless let-message let-onAccept="onAccept" let-onReject="onReject">
+        <div class="flex flex-col items-center p-8 bg-surface-0 dark:bg-surface-900 rounded">
+            <div
+                class="rounded-full bg-primary text-primary-contrast inline-flex justify-center items-center h-24 w-24 -mt-20">
+                <i class="fa fa-trash !text-5xl"></i>
+            </div>
+            <span class="font-bold text-2xl block mb-2 mt-6">{{ message.header }}</span>
+            <p class="mb-0">{{ message.message }}</p>
+            <div class="flex items-center gap-2 mt-6">
+                <button
+                    [ngClass]="'mt-1 px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
+                    (click)="onAccept()" class="w-32">Delete</button>
+                <button
+                    [ngClass]="'mt-1 px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-700 transition disabled:bg-gray-500 disabled:cursor-not-allowed'"
+                    (click)="onReject()" class="w-32">Cancel</button>
+            </div>
+        </div>
+    </ng-template>
+</p-confirmdialog>
