--- a/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
+++ b/src/app/WatchWare/UsersManagement/list-users/list-users.component.html
@@ -5,7 +5,7 @@
         <ng-template #caption>
             <div class="flex">
                 <button type="button" (click)="onCreate()"
-                    class=" px-4 bg-primary border border-accent text-accent rounded-md hover:bg-accent hover:text-primary transition">
+                    class=" px-4 bg-accent border border-accent text-primary rounded-md hover:bg-accent hover:text-primary transition">
                     <i class="fa fa-plus"></i>
                     Create
                 </button>
